Récupération OK des images depuis le Db.json

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
 @import './settings';
 @import './components/navigation';
-@import './pages/Homepage'
+@import './pages/Homepage';
+@import './pages/Portfolio';
+@import './pages/Contact'
