--- a/src/styles/pages/_Portfolio.scss
+++ b/src/styles/pages/_Portfolio.scss
@@ -2,3 +2,15 @@
     display: flex;
     flex-direction: row;
 }
+
+.portfolioContent {
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolioContent_main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
