--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,4 +2,8 @@
 @import './components/navigation';
 @import './pages/Homepage';
 @import './pages/Portfolio';
-@import './pages/Contact'
+@import './pages/Contact';
+@import './components/projectCard';
+@import './components/modal';
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css"
