--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,6 @@
 @import './pages/Contact';
 @import './components/projectCard';
 @import './components/modal';
+@import './components/competenceItem';
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css"
