--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,5 +6,7 @@
 @import './components/projectCard';
 @import './components/modal';
 @import './components/competenceItem';
+@import './components/contactForm';
+@import './components/contentHeader';
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css"
