--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,52 +1,75 @@
-.sidebar {
-    .id {
-        color: $white;
-        font-size: $fontSize-1;
-        font-weight: $fontWeight-1;
-    }
+.banner {
+
 
     display: flex;
     flex-direction: column;
-    width: 25%;
-    background-color: $color-1;
-    font-family: $font-1;
-    height: 100%;
-    min-height: $min-height;
-    min-width: 240px;
+    justify-content: end;
+    align-items: center;
+    background-image: url('../../../public/banner2avecnom.png');
+    background-repeat: no-repeat;
+    background-position: 10%;
+    background-size: 100%;
+    height: 520px;
+    width: 100%;
     border-radius: $border-radius1;
 
     @media screen and (max-width :850px) {
-        width: 100%;
-        flex-direction: row;
+        background-image: none;
+        height: 70px;
     }
 
     .navigation {
-        li {
-            padding: 25px;
-            font-size: $fontSize-2;
-            font-weight: $fontWeight-3;
-            padding: 15px;
-            border: 2px solid $color-3;
-            margin: 10px;
-            border-radius: 5px;
-
-            i {
-                margin-right: 25px;
-            }
+        width: 100%;
+        color: $black;
 
 
-            &:hover i {
-                transform: translate(5px, 1px);
-            }
 
-            &:hover a {
-                text-decoration: underline;
-                color: $color-5;
-            }
+        ul {
+            display: flex;
+            justify-content: space-around;
 
-            .navActive {
-                color: $color-5;
-                background-color: $color-4;
+            li {
+
+                padding: 25px;
+
+                padding: 15px;
+                margin: 10px;
+                border-radius: 5px;
+                background-color: aliceblue;
+                opacity: 0.7;
+                font-weight: 1000;
+                font-family: $font-1;
+                font-size: 21px;
+                color: $color-2;
+                ;
+
+                i {
+                    margin-right: 25px;
+                    font-size: 25px;
+                }
+
+                a {
+                    span {
+
+                        font-size: larger;
+
+                    }
+
+
+                }
+
+
+                &:hover i {
+                    transform: translate(5px, 1px);
+
+                }
+
+                &:hover a {
+                    text-decoration: underline;
+
+                }
+
+
             }
         }
     }
