--- a/src/styles/components/_projectCard.scss
+++ b/src/styles/components/_projectCard.scss
@@ -2,22 +2,30 @@
     height: 251px;
     border-radius: 15px;
     max-width: 40%;
-    width: 335px;
-    margin: 5% auto;
+    width: 400px;
+    margin: 10px auto;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     display: flex;
     flex-direction: row;
     padding: 5px;
+    background-color: white;
+    ;
 
+    @media screen and (max-width :850px) {
+        width: 80%;
+        max-width: none;
+    }
 
     .project-cardLeft {
         height: 100%;
-        width: 325px;
+        width: 225px;
+        margin-right: 38px;
 
         img {
-            height: 100%;
+            height: 80%;
             width: 100%;
             object-fit: cover;
+            margin: auto 0;
 
         }
     }
