--- a/src/styles/pages/_Homepage.scss
+++ b/src/styles/pages/_Homepage.scss
@@ -1,4 +1,58 @@
 .homePage {
     display: flex;
+    flex-direction: column;
+
+}
+
+.homeContent {
+    text-align: start;
+    margin-left: 25px;
+}
+
+.homePageStart {
+    display: flex;
     flex-direction: row;
+    margin: 80px auto;
+    border-radius: 10px;
+    justify-content: space-between;
+
+    @media screen and (max-width :850px) {
+        flex-direction: column-reverse;
+    }
+
+    .homePage_QuiSuisje {
+        width: 66%;
+        padding: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        font-size: 23px;
+        justify-content: center;
+        text-align: start;
+        justify-self: auto;
+
+        h3 {
+            margin-bottom: 10px;
+        }
+
+
+
+    }
+
+    .homePage_Img {
+        width: 23%;
+        height: auto;
+
+
+        @media screen and (max-width :850px) {
+            width: 45%;
+            margin: 0 auto;
+        }
+
+        img {
+            height: 100%;
+            width: 100%;
+            border-radius: 7px;
+        }
+    }
 }
