--- a/src/styles/pages/_Portfolio.scss
+++ b/src/styles/pages/_Portfolio.scss
@@ -1,16 +1,20 @@
 .Portfolio {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+
 }
 
 .portfolioContent {
     display: flex;
     flex-direction: column;
+    text-align: start;
+    margin-left: 25px;
+    margin-top: 110px;
 }
 
 .portfolioContent_main {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: wrap;
 }
