--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100&family=Kanit:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Kanit:wght@500&display=swap");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,9 +9,9 @@
 
 body {
   margin: 1rem auto;
-  max-width: 1200px;
-  font-family: "Exo 2", sans-serif;
-  color: #333;
+  max-width: 1400px;
+  font-family: "Goudy Bookletter 1911", sans-serif;
+  background-image: linear-gradient(to bottom right, #e8ffed 60%, white 60%);
 }
 
 button {
@@ -22,13 +24,13 @@ li {
 
 a {
   text-decoration: none;
-  color: rgb(99, 164, 233);
-  font-weight: 700;
   cursor: pointer;
+  color: #d7ab1d;
 }
 
 a.visited {
-  color: rgb(99, 164, 233);
+  color: #d7ab1d;
+  text-decoration: none;
 }
 
 .home,
@@ -57,53 +59,290 @@ a.visited {
   }
 }
 
-.sidebar {
+.banner {
   display: flex;
   flex-direction: column;
-  width: 25%;
-  background-color: #2a1d52;
-  font-family: "Exo 2", sans-serif;
-  height: 100%;
-  min-height: 95vh;
-  min-width: 240px;
+  justify-content: end;
+  align-items: center;
+  background-image: url("../../../public/banner2avecnom.png");
+  background-repeat: no-repeat;
+  background-position: 10%;
+  background-size: 100%;
+  height: 520px;
+  width: 100%;
   border-radius: 15px;
 }
-.sidebar .id {
-  color: #ddd;
-  font-size: larger;
-  font-weight: 800;
-}
 @media screen and (max-width: 850px) {
-  .sidebar {
-    width: 100%;
-    flex-direction: row;
+  .banner {
+    background-image: none;
+    height: 70px;
   }
 }
-.sidebar .navigation li {
+.banner .navigation {
+  width: 100%;
+  color: #333;
+}
+.banner .navigation ul {
+  display: flex;
+  justify-content: space-around;
+}
+.banner .navigation ul li {
   padding: 25px;
-  font-size: large;
-  font-weight: 500;
   padding: 15px;
-  border: 2px solid rgb(99, 164, 233);
   margin: 10px;
   border-radius: 5px;
+  background-color: aliceblue;
+  opacity: 0.7;
+  font-weight: 1000;
+  font-family: "Goudy Bookletter 1911", sans-serif;
+  font-size: 21px;
+  color: #d7ab1d;
 }
-.sidebar .navigation li i {
+.banner .navigation ul li i {
   margin-right: 25px;
+  font-size: 25px;
 }
-.sidebar .navigation li:hover i {
+.banner .navigation ul li a span {
+  font-size: larger;
+}
+.banner .navigation ul li:hover i {
   transform: translate(5px, 1px);
 }
-.sidebar .navigation li:hover a {
+.banner .navigation ul li:hover a {
   text-decoration: underline;
-  color: lightgreen;
-}
-.sidebar .navigation li .navActive {
-  color: lightgreen;
-  background-color: lightgrey;
 }
 
 .homePage {
   display: flex;
+  flex-direction: column;
+}
+
+.homeContent {
+  text-align: start;
+  margin-left: 25px;
+}
+
+.homePageStart {
+  display: flex;
   flex-direction: row;
+  margin: 80px auto;
+  border-radius: 10px;
+  justify-content: space-between;
+}
+@media screen and (max-width: 850px) {
+  .homePageStart {
+    flex-direction: column-reverse;
+  }
+}
+.homePageStart .homePage_QuiSuisje {
+  width: 66%;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 23px;
+  justify-content: center;
+  text-align: start;
+  justify-self: auto;
+}
+.homePageStart .homePage_QuiSuisje h3 {
+  margin-bottom: 10px;
+}
+.homePageStart .homePage_Img {
+  width: 23%;
+  height: auto;
+}
+@media screen and (max-width: 850px) {
+  .homePageStart .homePage_Img {
+    width: 45%;
+    margin: 0 auto;
+  }
+}
+.homePageStart .homePage_Img img {
+  height: 100%;
+  width: 100%;
+  border-radius: 7px;
+}
+
+.Portfolio {
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolioContent {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  margin-left: 25px;
+  margin-top: 110px;
+}
+
+.portfolioContent_main {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  flex-wrap: wrap;
+}
+
+.Contact {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-card {
+  height: 251px;
+  border-radius: 15px;
+  max-width: 40%;
+  width: 400px;
+  margin: 10px auto;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+  background-color: white;
+}
+@media screen and (max-width: 850px) {
+  .project-card {
+    width: 80%;
+    max-width: none;
+  }
+}
+.project-card .project-cardLeft {
+  height: 100%;
+  width: 225px;
+  margin-right: 38px;
+}
+.project-card .project-cardLeft img {
+  height: 80%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: auto 0;
+}
+.project-card .project-cardRight {
+  margin-top: 10%;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  width: 80%;
+  max-width: 800px;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.modal-content img {
+  width: 100%;
+  max-height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modal-content p {
+  margin: 15px 0;
+}
+
+.modal-content a {
+  display: inline-block;
+  margin: 15px 0;
+  color: blue;
+  text-decoration: none;
+}
+
+.modal-content button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.slider {
+  width: 100%;
+  margin: 20px 50;
+}
+
+.slick-slider {
+  margin-bottom: 50px;
+}
+
+.competenceItem {
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  text-align: center;
+  background-color: white;
+}
+
+.competenceImage {
+  width: 50px;
+  height: auto;
+}
+
+form {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+form label {
+  margin-bottom: 10px;
+  font-size: 1.1em;
+}
+form input,
+form textarea {
+  width: 480px;
+  min-width: 80%;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+form textarea {
+  height: 150px;
+  resize: none;
+}
+form button {
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
+}
+form button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+form button:hover {
+  background-color: #555;
+}
+
+.contentHeader {
+  display: none;
+}
+
+@media (max-width: 850px) {
+  .contentHeader {
+    display: block;
+  }
 }/*# sourceMappingURL=styles.css.map */
