--- a/src/styles/components/_projectCard.scss
+++ b/src/styles/components/_projectCard.scss
@@ -8,8 +8,16 @@
     display: flex;
     flex-direction: row;
     padding: 5px;
-    background-color: white;
-    ;
+    color: white;
+    background:
+        linear-gradient(to bottom right, rgba(194, 231, 215, 0.77), rgba(1, 155, 223, 0.3)),
+        url('../../../public/bodybackground.jpg') no-repeat center center/cover;
+
+    &:hover {
+        transform: translate(5px, 1px);
+        border: solid 1px $color-3;
+
+    }
 
     @media screen and (max-width :850px) {
         width: 80%;
