--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Kanit:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@500;800&family=Kanit:wght@500&display=swap');
 
-$font-1 : 'Goudy Bookletter 1911',
+$font-1 : 'Chivo',
 sans-serif;
 $font-2 : 'Kanit',
 serif;
 
-$fontSize-1 : larger;
-$fontSize-2 : large;
-$fontSize-3: medium;
+$fontSize-1 : 3.6rem;
+$fontSize-2 : 1.7rem;
+$fontSize-3: 1.15rem;
+
+$fontWeight-1 : 1000;
+$fontWeight-2 : 680;
+$fontWeight-3: 525;
 
 
 
@@ -35,6 +39,8 @@ $min-height: 95vh;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: $font-1;
+    overflow-wrap: break-word;
 }
 
 body {
@@ -42,6 +48,10 @@ body {
     max-width: 1400px;
     font-family: $font-1;
     background-image: linear-gradient(to bottom right, #e8ffed 60%, white 60%);
+
+    @media screen and (max-width :490px) {
+        overflow-x: hidden;
+    }
 
 }
 
@@ -56,7 +66,7 @@ li {
 a {
     text-decoration: none;
     cursor: pointer;
-    color: $color-2;
+    color: $color-1;
 
 }
 
@@ -85,4 +95,12 @@ a.visited {
         margin: 0;
 
     }
+}
+
+p {
+    font-size: $fontSize-2;
+}
+
+h3 {
+    font-size: $fontSize-3;
 }
