--- a/src/styles/components/_competenceItem.scss
+++ b/src/styles/components/_competenceItem.scss
@@ -1,14 +1,15 @@
 .competenceItem {
 
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
     display: inline-block;
     text-align: center;
-    background-color: white;
+    background-color: transparent;
 
 }
 
 .competenceImage {
-    width: 50px;
+    width: 80px;
     height: auto;
+    opacity: 0.6;
 }
