--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -5,61 +5,80 @@
     flex-direction: column;
     justify-content: end;
     align-items: center;
-    background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.3), transparent),
-        url('../../../public/banner2avecnom.png');
+    background-image: url('../../../public/banner.jpg');
 
     background-repeat: no-repeat;
     background-position: 10%;
     background-size: 100%;
     height: 520px;
     width: 100%;
+    max-width: 100vw;
     border-radius: $border-radius1;
 
-    @media screen and (max-width :850px) {
-        background-image: none;
-        height: 70px;
+    @media screen and (max-width :767px) {
+        background-size: cover;
+        max-width: 100vw;
+        width: 100%;
+
     }
 
+    .navHeader {
+        max-width: 100vw;
+        width: 100%;
+
+        h1 {
+            color: white;
+
+
+            margin-bottom: 55px;
+        }
+
+        h2 {
+            color: black;
+
+
+        }
+
+        margin-bottom: 9%;
+    }
+
+
+
     .navigation {
+        max-width: 100vw;
         width: 100%;
         color: $black;
-
-
 
         ul {
             display: flex;
             justify-content: space-around;
 
+            @media screen and (max-width :767px) {
+                flex-direction: column;
+            }
+
             li {
 
-                padding: 25px;
+
 
                 padding: 15px;
                 margin: 10px;
                 border-radius: 5px;
                 background-color: aliceblue;
                 opacity: 0.7;
-                font-weight: 1000;
-                font-family: $font-1;
-                font-size: 21px;
-                color: $color-2;
-                ;
+                font-weight: $fontWeight-1;
+
+                @media screen and (max-width :767px) {
+                    width: 100%;
+                    margin: 10px auto;
+
+
+                }
+
 
                 i {
                     margin-right: 25px;
-                    font-size: 25px;
                 }
-
-                a {
-                    span {
-
-                        font-size: larger;
-
-                    }
-
-
-                }
-
 
                 &:hover i {
                     transform: translate(5px, 1px);
