--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,17 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Kanit:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chivo:wght@500;800&family=Kanit:wght@500&display=swap");
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Chivo", sans-serif;
+  overflow-wrap: break-word;
 }
 
 body {
   margin: 1rem auto;
   max-width: 1400px;
-  font-family: "Goudy Bookletter 1911", sans-serif;
+  font-family: "Chivo", sans-serif;
   background-image: linear-gradient(to bottom right, #e8ffed 60%, white 60%);
+}
+@media screen and (max-width: 490px) {
+  body {
+    overflow-x: hidden;
+  }
 }
 
 button {
@@ -25,7 +32,7 @@ li {
 a {
   text-decoration: none;
   cursor: pointer;
-  color: #d7ab1d;
+  color: #2a1d52;
 }
 
 a.visited {
@@ -59,26 +66,49 @@ a.visited {
   }
 }
 
+p {
+  font-size: 1.7rem;
+}
+
+h3 {
+  font-size: 1.15rem;
+}
+
 .banner {
   display: flex;
   flex-direction: column;
   justify-content: end;
   align-items: center;
-  background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.3), transparent), url("../../../public/banner2avecnom.png");
+  background-image: url("../../../public/banner.jpg");
   background-repeat: no-repeat;
   background-position: 10%;
   background-size: 100%;
   height: 520px;
   width: 100%;
+  max-width: 100vw;
   border-radius: 15px;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 767px) {
   .banner {
-    background-image: none;
-    height: 70px;
+    background-size: cover;
+    max-width: 100vw;
+    width: 100%;
   }
 }
+.banner .navHeader {
+  max-width: 100vw;
+  width: 100%;
+  margin-bottom: 9%;
+}
+.banner .navHeader h1 {
+  color: white;
+  margin-bottom: 55px;
+}
+.banner .navHeader h2 {
+  color: black;
+}
 .banner .navigation {
+  max-width: 100vw;
   width: 100%;
   color: #333;
 }
@@ -86,24 +116,27 @@ a.visited {
   display: flex;
   justify-content: space-around;
 }
+@media screen and (max-width: 767px) {
+  .banner .navigation ul {
+    flex-direction: column;
+  }
+}
 .banner .navigation ul li {
-  padding: 25px;
   padding: 15px;
   margin: 10px;
   border-radius: 5px;
   background-color: aliceblue;
   opacity: 0.7;
   font-weight: 1000;
-  font-family: "Goudy Bookletter 1911", sans-serif;
-  font-size: 21px;
-  color: #d7ab1d;
+}
+@media screen and (max-width: 767px) {
+  .banner .navigation ul li {
+    width: 100%;
+    margin: 10px auto;
+  }
 }
 .banner .navigation ul li i {
   margin-right: 25px;
-  font-size: 25px;
-}
-.banner .navigation ul li a span {
-  font-size: larger;
 }
 .banner .navigation ul li:hover i {
   transform: translate(5px, 1px);
@@ -116,10 +149,20 @@ a.visited {
   display: flex;
   flex-direction: column;
 }
+.homePage p {
+  font-size: 1.15rem;
+}
+.homePage h3 {
+  font-size: 1.7rem;
+  margin-bottom: 2.5rem;
+}
 
 .homeContent {
   text-align: start;
   margin-left: 25px;
+  margin-right: 25px;
+  justify-content: center;
+  margin-top: 35px;
 }
 
 .homePageStart {
@@ -140,13 +183,20 @@ a.visited {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  font-size: 23px;
   justify-content: center;
   text-align: start;
   justify-self: auto;
 }
-.homePageStart .homePage_QuiSuisje h3 {
-  margin-bottom: 10px;
+@media screen and (max-width: 450px) {
+  .homePageStart .homePage_QuiSuisje {
+    padding: 0;
+    width: 100%;
+    margin: 0;
+  }
+}
+.homePageStart .homePage_QuiSuisje p {
+  justify-content: first baseline;
+  margin: 0.5rem;
 }
 .homePageStart .homePage_Img {
   width: 23%;
@@ -176,12 +226,28 @@ a.visited {
   margin-left: 25px;
   margin-top: 110px;
 }
+@media screen and (max-width: 490px) {
+  .portfolioContent {
+    margin: 25px auto;
+  }
+}
 
 .portfolioContent_main {
   display: flex;
   flex-direction: row;
   justify-content: start;
   flex-wrap: wrap;
+}
+@media screen and (max-width: 767px) {
+  .portfolioContent_main {
+    justify-content: center;
+    width: 100%;
+    margin: 0px auto;
+  }
+}
+
+.pageTittle {
+  margin: 25px auto;
 }
 
 .Contact {
@@ -191,40 +257,48 @@ a.visited {
 
 .project-card {
   height: 251px;
-  border-radius: 15px;
-  max-width: 40%;
-  width: 400px;
-  margin: 10px auto;
+  width: 251px;
+  border-radius: 50%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  display: flex;
-  flex-direction: row;
   padding: 5px;
-  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../../bodybackground.jpg") no-repeat center center/cover;
+  color: white;
+  position: relative;
+  cursor: pointer;
+  margin: 3%;
 }
 .project-card:hover {
   transform: translate(5px, 1px);
   border: solid 1px rgb(99, 164, 233);
 }
-@media screen and (max-width: 850px) {
-  .project-card {
-    width: 80%;
-    max-width: none;
+.project-card .project-background {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  position: relative;
+}
+.project-card .project-background img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.project-card .project-cardTittle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.35);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .project-card .project-cardTittle {
+    display: block;
   }
 }
-.project-card .project-cardLeft {
-  height: 100%;
-  width: 225px;
-  margin-right: 38px;
-}
-.project-card .project-cardLeft img {
-  height: 80%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin: auto 0;
-}
-.project-card .project-cardRight {
-  margin-top: 10%;
+.project-card:hover .project-cardTittle {
+  display: block;
 }
 
 .modal {
@@ -238,6 +312,9 @@ a.visited {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+}
+.modal p {
+  font-size: 1.15rem;
 }
 
 .modal-content {
@@ -273,7 +350,7 @@ a.visited {
   right: 20px;
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 1.15rem;
   cursor: pointer;
 }
 
@@ -286,17 +363,30 @@ a.visited {
   margin-bottom: 50px;
 }
 
+.slick-prev {
+  display: none;
+}
+
+.slick-next {
+  display: none;
+}
+
+.slick-arrow {
+  display: none;
+}
+
 .competenceItem {
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
   display: inline-block;
   text-align: center;
-  background-color: white;
+  background-color: transparent;
 }
 
 .competenceImage {
-  width: 50px;
+  width: 80px;
   height: auto;
+  opacity: 0.6;
 }
 
 form {
@@ -304,10 +394,10 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 form label {
   margin-bottom: 10px;
-  font-size: 1.1em;
 }
 form input,
 form textarea {
@@ -316,9 +406,18 @@ form textarea {
   padding: 10px;
   margin-bottom: 20px;
   margin-left: 40px;
-  font-size: 1em;
+  font-size: 1.15rem;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+@media screen and (max-width: 767px) {
+  form input,
+  form textarea {
+    width: auto;
+    max-width: 100%;
+    margin: 10px 0;
+    padding: 10px 10px;
+  }
 }
 form textarea {
   height: 150px;
@@ -326,7 +425,7 @@ form textarea {
 }
 form button {
   padding: 10px 20px;
-  font-size: 1em;
+  font-size: 1.15rem;
   border: none;
   border-radius: 5px;
   background-color: #333;
@@ -339,14 +438,4 @@ form button:disabled {
 }
 form button:hover {
   background-color: #555;
-}
-
-.contentHeader {
-  display: none;
-}
-
-@media (max-width: 850px) {
-  .contentHeader {
-    display: block;
-  }
 }/*# sourceMappingURL=styles.css.map */
