--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -104,3 +104,49 @@ p {
 h3 {
     font-size: $fontSize-3;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.animated-text {
+    animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.slide-in {
+    animation: slideInFromLeft 0.7s ease-in-out;
+}
+
+@media (max-width: 767px) {
+    .slide-in {
+        animation: none !important;
+        /* Utilisez !important pour vous assurer que cette règle s'applique */
+        transform: none !important;
+        opacity: 1 !important;
+    }
+
+    .animated-text {
+        animation: none !important;
+        /* Utilisez !important pour vous assurer que cette règle s'applique */
+        transform: none !important;
+        opacity: 1 !important;
+    }
+}
