--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -6,7 +6,7 @@
     justify-content: end;
     align-items: center;
     background-image: url('../../../public/banner.jpg');
-
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.55);
     background-repeat: no-repeat;
     background-position: 10%;
     background-size: 100%;
@@ -25,18 +25,10 @@
     .navHeader {
         max-width: 100vw;
         width: 100%;
+        color: white;
 
         h1 {
-            color: white;
-
-
             margin-bottom: 55px;
-        }
-
-        h2 {
-            color: black;
-
-
         }
 
         margin-bottom: 9%;
@@ -47,7 +39,7 @@
     .navigation {
         max-width: 100vw;
         width: 100%;
-        color: $black;
+        color: $color-1;
 
         ul {
             display: flex;
@@ -87,6 +79,7 @@
 
                 &:hover a {
                     text-decoration: underline;
+                    color: $color-2;
 
                 }
 
