--- a/src/styles/pages/_Homepage.scss
+++ b/src/styles/pages/_Homepage.scss
@@ -23,7 +23,7 @@
 .homePageStart {
     display: flex;
     flex-direction: row;
-    margin: 80px auto;
+    margin: 50px auto;
     border-radius: 10px;
     justify-content: space-between;
 
@@ -59,7 +59,8 @@
     .homePage_Img {
         width: 23%;
         height: auto;
-
+        min-width: 340px;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 
         @media screen and (max-width :850px) {
             width: 45%;
@@ -72,4 +73,8 @@
             border-radius: 7px;
         }
     }
+}
+
+homeContent_main {
+    margin: 80px auto;
 }
