--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Chivo:wght@500;800&family=Kanit:wght@500&display=swap");
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
@@ -74,12 +75,53 @@ h3 {
   font-size: 1.15rem;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.animated-text {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.slide-in {
+  animation: slideInFromLeft 0.7s ease-in-out;
+}
+
+@media (max-width: 767px) {
+  .slide-in {
+    animation: none !important;
+    /* Utilisez !important pour vous assurer que cette règle s'applique */
+    transform: none !important;
+    opacity: 1 !important;
+  }
+  .animated-text {
+    animation: none !important;
+    /* Utilisez !important pour vous assurer que cette règle s'applique */
+    transform: none !important;
+    opacity: 1 !important;
+  }
+}
 .banner {
   display: flex;
   flex-direction: column;
   justify-content: end;
   align-items: center;
   background-image: url("../../../public/banner.jpg");
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.55);
   background-repeat: no-repeat;
   background-position: 10%;
   background-size: 100%;
@@ -98,19 +140,16 @@ h3 {
 .banner .navHeader {
   max-width: 100vw;
   width: 100%;
+  color: white;
   margin-bottom: 9%;
 }
 .banner .navHeader h1 {
-  color: white;
   margin-bottom: 55px;
-}
-.banner .navHeader h2 {
-  color: black;
 }
 .banner .navigation {
   max-width: 100vw;
   width: 100%;
-  color: #333;
+  color: #2a1d52;
 }
 .banner .navigation ul {
   display: flex;
@@ -143,6 +182,7 @@ h3 {
 }
 .banner .navigation ul li:hover a {
   text-decoration: underline;
+  color: #d7ab1d;
 }
 
 .homePage {
@@ -168,7 +208,7 @@ h3 {
 .homePageStart {
   display: flex;
   flex-direction: row;
-  margin: 80px auto;
+  margin: 50px auto;
   border-radius: 10px;
   justify-content: space-between;
 }
@@ -201,6 +241,8 @@ h3 {
 .homePageStart .homePage_Img {
   width: 23%;
   height: auto;
+  min-width: 340px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 @media screen and (max-width: 850px) {
   .homePageStart .homePage_Img {
@@ -212,6 +254,10 @@ h3 {
   height: 100%;
   width: 100%;
   border-radius: 7px;
+}
+
+homeContent_main {
+  margin: 80px auto;
 }
 
 .Portfolio {
