--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -116,7 +116,7 @@ h3 {
 }
 
 .animated-text {
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 @keyframes slideInFromLeft {
@@ -132,7 +132,7 @@ h3 {
 }
 
 .slide-in {
-    animation: slideInFromLeft 0.7s ease-in-out;
+    animation: slideInFromLeft 0.7s ease-out;
 }
 
 @media (max-width: 767px) {
