--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -84,7 +84,7 @@ h3 {
   }
 }
 .animated-text {
-  animation: fadeIn 1s ease-in-out;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 @keyframes slideInFromLeft {
@@ -98,7 +98,7 @@ h3 {
   }
 }
 .slide-in {
-  animation: slideInFromLeft 0.7s ease-in-out;
+  animation: slideInFromLeft 0.7s ease-out;
 }
 
 @media (max-width: 767px) {
