--- a/src/styles/components/_competenceItem.scss
+++ b/src/styles/components/_competenceItem.scss
@@ -1,10 +1,14 @@
 .competenceItem {
 
     padding: 10px;
-    margin: 20px;
+    margin: 10px 5px;
     display: inline-block;
     text-align: center;
     background-color: transparent;
+
+    h4 {
+        margin-bottom: 5px;
+    }
 
 }
 
