--- a/src/styles/pages/_Homepage.scss
+++ b/src/styles/pages/_Homepage.scss
@@ -48,7 +48,7 @@
         }
 
         p {
-            justify-content: first baseline;
+            justify-content: start;
             margin: 0.5rem;
         }
 
