--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -280,7 +280,7 @@ homeContent_main {
 .portfolioContent_main {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 @media screen and (max-width: 767px) {
