--- a/src/styles/pages/_Portfolio.scss
+++ b/src/styles/pages/_Portfolio.scss
@@ -19,7 +19,7 @@
 .portfolioContent_main {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
 
     @media screen and (max-width :767px) {
