--- a/src/styles/pages/_Homepage.scss
+++ b/src/styles/pages/_Homepage.scss
@@ -18,6 +18,10 @@
     margin-right: 25px;
     justify-content: center;
     margin-top: 35px;
+
+    @media screen and (max-width :850px) {
+        margin: 0;
+    }
 }
 
 .homePageStart {
