--- a/src/styles/components/_projectCard.scss
+++ b/src/styles/components/_projectCard.scss
@@ -41,6 +41,7 @@
 
         @media screen and (max-width :767px) {
             display: block;
+            transform: translate(-50%, -50%) !important;
         }
     }
 
