--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -58,16 +58,33 @@
 
 .slick-slider {
     margin-bottom: 50px;
+    position: relative;
+    padding: 10px;
 }
 
-.slick-prev {
-    display: none;
+.slick-prev:before,
+.slick-next:before {
+    margin-top: 250px;
+    opacity: 1 !important;
+    color: darkgray;
 }
 
+.slick-prev:before {
+    position: fixed;
+    right: -15px;
+
+}
+
+.slick-next:before {
+    position: fixed;
+    right: -25px;
+}
+
+/*
 .slick-next {
     display: none;
 }
 
 .slick-arrow {
     display: none;
-}
+}*/
