--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -412,20 +412,35 @@ homeContent_main {
 
 .slick-slider {
   margin-bottom: 50px;
+  position: relative;
+  padding: 10px;
 }
 
-.slick-prev {
-  display: none;
+.slick-prev:before,
+.slick-next:before {
+  margin-top: 250px;
+  opacity: 1 !important;
+  color: darkgray;
 }
 
+.slick-prev:before {
+  position: fixed;
+  right: -15px;
+}
+
+.slick-next:before {
+  position: fixed;
+  right: -25px;
+}
+
+/*
 .slick-next {
-  display: none;
+    display: none;
 }
 
 .slick-arrow {
-  display: none;
-}
-
+    display: none;
+}*/
 .competenceItem {
   padding: 10px;
   margin: 10px 5px;
