--- a/src/styles/pages/_Homepage.scss
+++ b/src/styles/pages/_Homepage.scss
@@ -42,7 +42,7 @@
         flex-direction: column;
         justify-content: space-around;
         justify-content: center;
-        text-align: start;
+        text-align: justify;
 
         @media screen and (max-width :450px) {
             padding: 0;
