--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    background-image: url('../../../public/pexels-photo-574069.jpeg');
+    background-image: url('../../../public/pexels-photo-574069.webp');
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.55);
     background-repeat: no-repeat;
     background-position: 10%;
@@ -26,6 +26,7 @@
         max-width: 100vw;
         width: 100%;
         color: white;
+        justify-content: baseline;
 
         h1 {
             margin-bottom: 55px;
