--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    background-image: url('../../../public/pexels-photo-574069.webp');
+    background-image: url('../../../public/pexels-photo-574069.jpeg');
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.55);
     background-repeat: no-repeat;
     background-position: 10%;
